--- a/notebooks/Predict_from_VGG_training.ipynb
+++ b/notebooks/Predict_from_VGG_training.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "01e877ca",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "2a2067e5",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
        "315"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,8 +502,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "eb4b6cdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_species = \"\"\n",
+    "for k,v in classes_indices.items():\n",
+    "    full_species += k + \" / \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d2619faf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AFRICAN CROWNED CRANE / AFRICAN FIREFINCH / ALBATROSS / ALEXANDRINE PARAKEET / AMERICAN AVOCET / AMERICAN BITTERN / AMERICAN COOT / AMERICAN GOLDFINCH / AMERICAN KESTREL / AMERICAN PIPIT / AMERICAN REDSTART / ANHINGA / ANNAS HUMMINGBIRD / ANTBIRD / ARARIPE MANAKIN / ASIAN CRESTED IBIS / BALD EAGLE / BALD IBIS / BALI STARLING / BALTIMORE ORIOLE / BANANAQUIT / BANDED BROADBILL / BANDED PITA / BAR-TAILED GODWIT / BARN OWL / BARN SWALLOW / BARRED PUFFBIRD / BAY-BREASTED WARBLER / BEARDED BARBET / BEARDED BELLBIRD / BEARDED REEDLING / BELTED KINGFISHER / BIRD OF PARADISE / BLACK & YELLOW bROADBILL / BLACK BAZA / BLACK FRANCOLIN / BLACK SKIMMER / BLACK SWAN / BLACK TAIL CRAKE / BLACK THROATED BUSHTIT / BLACK THROATED WARBLER / BLACK VULTURE / BLACK-CAPPED CHICKADEE / BLACK-NECKED GREBE / BLACK-THROATED SPARROW / BLACKBURNIAM WARBLER / BLONDE CRESTED WOODPECKER / BLUE COAU / BLUE GROUSE / BLUE HERON / BLUE THROATED TOUCANET / BOBOLINK / BORNEAN BRISTLEHEAD / BORNEAN LEAFBIRD / BORNEAN PHEASANT / BROWN CREPPER / BROWN NOODY / BROWN THRASHER / BULWERS PHEASANT / CACTUS WREN / CALIFORNIA CONDOR / CALIFORNIA GULL / CALIFORNIA QUAIL / CANARY / CAPE MAY WARBLER / CAPPED HERON / CAPUCHINBIRD / CARMINE BEE-EATER / CASPIAN TERN / CASSOWARY / CEDAR WAXWING / CERULEAN WARBLER / CHARA DE COLLAR / CHESTNET BELLIED EUPHONIA / CHIPPING SPARROW / CHUKAR PARTRIDGE / CINNAMON TEAL / CLARKS NUTCRACKER / COCK OF THE  ROCK / COCKATOO / COLLARED ARACARI / COMMON FIRECREST / COMMON GRACKLE / COMMON HOUSE MARTIN / COMMON LOON / COMMON POORWILL / COMMON STARLING / COUCHS KINGBIRD / CRESTED AUKLET / CRESTED CARACARA / CRESTED NUTHATCH / CRIMSON SUNBIRD / CROW / CROWNED PIGEON / CUBAN TODY / CUBAN TROGON / CURL CRESTED ARACURI / D-ARNAUDS BARBET / DARK EYED JUNCO / DOUBLE BARRED FINCH / DOUBLE BRESTED CORMARANT / DOWNY WOODPECKER / EASTERN BLUEBIRD / EASTERN MEADOWLARK / EASTERN ROSELLA / EASTERN TOWEE / ELEGANT TROGON / ELLIOTS  PHEASANT / EMPEROR PENGUIN / EMU / ENGGANO MYNA / EURASIAN GOLDEN ORIOLE / EURASIAN MAGPIE / EVENING GROSBEAK / FAIRY BLUEBIRD / FIRE TAILLED MYZORNIS / FLAME TANAGER / FLAMINGO / FRIGATE / GAMBELS QUAIL / GANG GANG COCKATOO / GILA WOODPECKER / GILDED FLICKER / GLOSSY IBIS / GO AWAY BIRD / GOLD WING WARBLER / GOLDEN CHEEKED WARBLER / GOLDEN CHLOROPHONIA / GOLDEN EAGLE / GOLDEN PHEASANT / GOLDEN PIPIT / GOULDIAN FINCH / GRAY CATBIRD / GRAY PARTRIDGE / GREAT GRAY OWL / GREAT KISKADEE / GREAT POTOO / GREATOR SAGE GROUSE / GREEN BROADBILL / GREEN JAY / GREEN MAGPIE / GREY PLOVER / GUINEA TURACO / GUINEAFOWL / GYRFALCON / HARLEQUIN DUCK / HARPY EAGLE / HAWAIIAN GOOSE / HELMET VANGA / HIMALAYAN MONAL / HOATZIN / HOODED MERGANSER / HOOPOES / HORNBILL / HORNED GUAN / HORNED LARK / HORNED SUNGEM / HOUSE FINCH / HOUSE SPARROW / HYACINTH MACAW / IMPERIAL SHAQ / INCA TERN / INDIAN BUSTARD / INDIAN PITTA / INDIAN ROLLER / INDIGO BUNTING / IWI / JABIRU / JAVA SPARROW / KAGU / KAKAPO / KILLDEAR / KING VULTURE / KIWI / KOOKABURRA / LARK BUNTING / LILAC ROLLER / LONG-EARED OWL / MAGPIE GOOSE / MALABAR HORNBILL / MALACHITE KINGFISHER / MALAGASY WHITE EYE / MALEO / MALLARD DUCK / MANDRIN DUCK / MARABOU STORK / MASKED BOOBY / MASKED LAPWING / MIKADO  PHEASANT / MOURNING DOVE / MYNA / NICOBAR PIGEON / NOISY FRIARBIRD / NORTHERN CARDINAL / NORTHERN FLICKER / NORTHERN GANNET / NORTHERN GOSHAWK / NORTHERN JACANA / NORTHERN MOCKINGBIRD / NORTHERN PARULA / NORTHERN RED BISHOP / NORTHERN SHOVELER / OCELLATED TURKEY / OKINAWA RAIL / ORANGE BRESTED BUNTING / ORIENTAL BAY OWL / OSPREY / OSTRICH / OVENBIRD / OYSTER CATCHER / PAINTED BUNTIG / PALILA / PARADISE TANAGER / PARAKETT  AKULET / PARUS MAJOR / PATAGONIAN SIERRA FINCH / PEACOCK / PELICAN / PEREGRINE FALCON / PHILIPPINE EAGLE / PINK ROBIN / PUFFIN / PURPLE FINCH / PURPLE GALLINULE / PURPLE MARTIN / PURPLE SWAMPHEN / PYGMY KINGFISHER / QUETZAL / RAINBOW LORIKEET / RAZORBILL / RED BEARDED BEE EATER / RED BELLIED PITTA / RED BROWED FINCH / RED FACED CORMORANT / RED FACED WARBLER / RED FODY / RED HEADED DUCK / RED HEADED WOODPECKER / RED HONEY CREEPER / RED NAPED TROGON / RED TAILED HAWK / RED TAILED THRUSH / RED WINGED BLACKBIRD / RED WISKERED BULBUL / REGENT BOWERBIRD / RING-NECKED PHEASANT / ROADRUNNER / ROBIN / ROCK DOVE / ROSY FACED LOVEBIRD / ROUGH LEG BUZZARD / ROYAL FLYCATCHER / RUBY THROATED HUMMINGBIRD / RUDY KINGFISHER / RUFOUS KINGFISHER / RUFUOS MOTMOT / SAMATRAN THRUSH / SAND MARTIN / SANDHILL CRANE / SATYR TRAGOPAN / SCARLET CROWNED FRUIT DOVE / SCARLET IBIS / SCARLET MACAW / SCARLET TANAGER / SHOEBILL / SHORT BILLED DOWITCHER / SMITHS LONGSPUR / SNOWY EGRET / SNOWY OWL / SORA / SPANGLED COTINGA / SPLENDID WREN / SPOON BILED SANDPIPER / SPOONBILL / SRI LANKA BLUE MAGPIE / STEAMER DUCK / STORK BILLED KINGFISHER / STRAWBERRY FINCH / STRIPED OWL / STRIPPED MANAKIN / STRIPPED SWALLOW / SUPERB STARLING / SWINHOES PHEASANT / TAIWAN MAGPIE / TAKAHE / TASMANIAN HEN / TEAL DUCK / TIT MOUSE / TOUCHAN / TOWNSENDS WARBLER / TREE SWALLOW / TRUMPTER SWAN / TURKEY VULTURE / TURQUOISE MOTMOT / UMBRELLA BIRD / VARIED THRUSH / VENEZUELIAN TROUPIAL / VERMILION FLYCATHER / VICTORIA CROWNED PIGEON / VIOLET GREEN SWALLOW / VULTURINE GUINEAFOWL / WALL CREAPER / WATTLED CURASSOW / WHIMBREL / WHITE BROWED CRAKE / WHITE CHEEKED TURACO / WHITE NECKED RAVEN / WHITE TAILED TROPIC / WHITE THROATED BEE EATER / WILD TURKEY / WILSONS BIRD OF PARADISE / WOOD DUCK / YELLOW BELLIED FLOWERPECKER / YELLOW CACIQUE / YELLOW HEADED BLACKBIRD / '"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_species"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98d1d4d9",
    "metadata": {},
    "outputs": [],
    "source": []
